# tddm

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/disk/: local.rs  mod.rs  provider.rs
core/src/disk/os/: mac.rs  windows.rs
core/src/partition/: mod.rs  provider.rs
core/src/partition/os/: linux.rs  windows.rs
