[package]
name = "pddm_core"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_Security",
    "Win32_System_IO",

] }
